# for display continuity sake please use 2 spaces instead of tabs

2013-04-03 mmichaud <michael.michaud@free.fr>
  * Sort the list of beantools for linux/mac users
  * bug 3608987 finally resolved

--> Changes.txt updated up to here

2013-03-31 mmichaud <michael.michaud@free.fr>
  * Improve postgis driver : add a vacumm analyze after creation of a spatial
    index (SaveToPostGISDataSource). Test if a spatial index exists to choose 
    the most appropriate way to compute the dataset extent (PostgisDSMetadata)

2013-03-30 ede
  * make statusbar vertically resizable
  * all fields resizeable again and tooltipped
  * statusbar looks better now
  * minor fixes, cleanup

2013-03-30 mmichaud <michael.michaud@free.fr>
  * bug 3607970 : improve robustness of SimplifyPolygonCoveragePlugIn and 
    normalize I18N
  * Fix PasteStylePlugIn (was throwing exception with LabelStyle using FID)

2013-03-28 mmichaud <michael.michaud@free.fr>
  * fix Screen Scale and SaveImageAsSVG problem (would need some refactoring 
    after 1.6 release though). Change resolution to 0.001 pixel size for svg 
    drawer
  
2013-03-27 mmichaud <michael.michaud@free.fr>
  * Change output resolution of svg drawer from 0.5 to 0.1 pixel

2013-03-27 mmichaud <michael.michaud@free.fr>
  * Improve how buttons of RunDataStoreQuery works
  
2013-03-24 mmichaud <michael.michaud@free.fr>
  * Postgis Reader/Writer is now SRID aware

2013-03-24 mmichaud <michael.michaud@free.fr>
  * It is now much faster to get the list of available WMS layer from a service
  
2013-03-24 mmichaud <michael.michaud@free.fr>
  * Prepare code to accept csv format persistence in projects

2013-03-21 mmichaud <michael.michaud@free.fr>
  * fix : 3608648 can now open a project including broken db connections.
  * ZoomToScalePlugIn now remembers last scale set bythe user
  * Improve exception handling in DataStoreQueryDataSource
  * In AddDataStoreLayerPanel, the list of available tables is now uptodate
